Fix schema error: class->classname

--- a/schema/Watcher.yaml
+++ b/schema/Watcher.yaml
@@ -19,7 +19,7 @@ properties:
     type: array
     items:
       type: object
-      required: [class, configs]
+      required: [classname, configs]
       additionalProperties: false
       properties:
         classname:
