--- a/tests/data/config/two_scriptqueue_enabled.yaml
+++ b/tests/data/config/two_scriptqueue_enabled.yaml
@@ -3,3 +3,7 @@ rules:
   configs:
   - name: ScriptQueue:1
   - name: ScriptQueue:2
+escalation:
+- alarms: [Enabled.ScriptQueue:2]
+  to: stella
+  delay: 0.11
