--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -20,18 +20,7 @@ build:
 
 test:
   requires:
-    - pytest
-    - pytest-flake8
-    - pytest-cov
-    - asynctest
-    - black == 19.10b0
-    - numpy
-    - astropy
-    - jsonschema
-    - pyyaml
-    - boto3
-    - moto
-    - ts-dds
+    - ts-conda-build
     - ts-idl
     - ts-salobj
   source_files:
@@ -54,4 +43,5 @@ requirements:
     - python
     - setuptools
     - setuptools_scm
+    - ts_idl
     - ts-salobj
