Update conda/meta.yaml to pin version of ts_idl and ts_salobj

--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -12,8 +12,8 @@ build:
 test:
   requires:
     - ts-conda-build
-    - ts-idl
-    - ts-salobj
+    - ts-idl {{ idl_version }}
+    - ts-salobj {{ salobj_version }}
   source_files:
     - python
     - bin
