--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -13,6 +13,7 @@ test:
   requires:
     - ts-conda-build =0.3
     - ts-idl {{ idl_version }}
+    - ts-utils
     - ts-salobj {{ salobj_version }}
   source_files:
     - python
@@ -34,4 +35,5 @@ requirements:
     - setuptools
     - setuptools_scm
     - ts-idl
+    - ts-utils
     - ts-salobj
