--- a/setup.cfg
+++ b/setup.cfg
@@ -4,12 +4,11 @@ ignore = E133, E203, E226, E228, N802, N803, N806, W503
 exclude =
   bin,
   doc,
-  **/*/__init__.py,
-  **/*/version.py,
+  __init__.py,
   tests/.tests
 
 [tool:pytest]
-addopts = --flake8
+addopts = --black --flake8 --ignore=python/lsst/ts/watcher/version.py
 flake8-ignore = E133 E203 E226 E228 N802 N803 N806 W503
 
 [metadata]
