DewPointDepression rule: assume a dewPoint field
for all humidity sensors (DM-32251).

--- a/tests/data/config/dew_point_depression/bad_dew_point_no_topic_name.yaml
+++ b/tests/data/config/dew_point_depression/bad_dew_point_no_topic_name.yaml
@@ -2,8 +2,7 @@ name: Main Telescope
 dew_point_sensors:
   - sal_name: 'ESS:5'
     topics:
-      - sensor_type: dewpoint
-        sensor_names:
+      - sensor_names:
           - up
           - down
 temperature_sensors:
