Update DewPointDepression and Humidity rules
To use updated filtered field wrappers and ThresholdHandler.

--- a/tests/data/config/dew_point_depression/bad_no_dew_point_sensors.yaml
+++ b/tests/data/config/dew_point_depression/bad_no_dew_point_sensors.yaml
@@ -1,10 +1,11 @@
 name: Main Telescope
 dew_point_sensors: []
 temperature_sensors:
-  - sal_name: 'ESS:2'
+  - sal_index: 2
     topics:
       - topic_name: temperature
-        sensor_field_names:
+        sensor_names:
           - sensor_name: somewhere
-            field_name: temperature
             indices: [0, 1, 2, 3]
+warning_level: 2
+serious_level: 3
