--- a/tests/data/config/dew_point_depression/bad_temperature_no_sensor_name.yaml
+++ b/tests/data/config/dew_point_depression/bad_temperature_no_sensor_name.yaml
@@ -1,14 +1,16 @@
 name: Main Telescope
 dew_point_sensors:
-  - sal_name: 'ESS:5'
+  - sal_index: 5
     topics:
       - topic_name: hx85a
         sensor_names:
           - up
           - down
 temperature_sensors:
-  - sal_name: 'ESS:2'
+  - sal_index: 2
     topics:
       - topic_name: temperature
-        sensor_field_names:
-          - field_name: temperature
+        sensor_names:
+          - indices: [0, 1]
+warning_level: 2
+serious_level: 3
