--- a/tests/data/config/humidity/bad_humidity_no_sensor_names.yaml
+++ b/tests/data/config/humidity/bad_humidity_no_sensor_names.yaml
@@ -1,6 +1,6 @@
 name: Main Telescope
 humidity_sensors:
-  - sal_name: 'ESS:5'
+  - sal_index: 5
     topics:
       - topic_name: hx85a
         sensor_names: []
