--- a/tests/data/config/humidity/bad_no_sal_index.yaml
+++ b/tests/data/config/humidity/bad_no_sal_index.yaml
@@ -1,7 +1,7 @@
 name: Main Telescope
 humidity_sensors:
-  - sal_index: 5
-    topics:
+  - topics:
+      - topic_name: hx85a
         sensor_names:
           - up
           - down
