--- a/tests/data/config/humidity/good_full.yaml
+++ b/tests/data/config/humidity/good_full.yaml
@@ -1,6 +1,6 @@
 name: Main Telescope
 humidity_sensors:
-  - sal_name: 'ESS:5'
+  - sal_index: 5
     topics:
       - topic_name: hx85a
         sensor_names:
@@ -9,12 +9,12 @@ humidity_sensors:
       - topic_name: hx85ba
         sensor_names:
           - outside
-  - sal_name: 'ESS:1'
+  - sal_index: 1
     topics:
       - topic_name: hx85a
         sensor_names:
           - inside
-warning_level: 95
+warning_level: 73
 serious_level: 98
 hysteresis: 1
 poll_interval: 10
