--- a/tests/data/config/humidity/good_minimal.yaml
+++ b/tests/data/config/humidity/good_minimal.yaml
@@ -1,8 +1,8 @@
 name: Main Telescope
 humidity_sensors:
-  - sal_name: 'ESS:5'
+  - sal_index: 1
     topics:
       - topic_name: hx85a
         sensor_names:
-          - up
-          - down
+          - inside
+warning_level: 73
