Update for new configuration

--- a/tests/data/config/csc/enabled.yaml
+++ b/tests/data/config/csc/enabled.yaml
@@ -9,7 +9,7 @@ rules:
   - name: ATCamera
   - name: ScriptQueue:2
 escalation:
-- alarms: [Enabled.AT*]
+- alarms: ["Enabled.AT*"]
   to: stella
   delay: 0.11
   # This should be ignored because the previous rule handles it
@@ -17,6 +17,6 @@ escalation:
   to: otho
   delay: 0.12
   # This should result in no escalation
-- alarms: [Enabled.ScriptQueue:*]
+- alarms: ["Enabled.ScriptQueue:*"]
   to: ""
   delay: 0
