setup.cfg: set asyncio_mode = auto

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,6 +10,7 @@ exclude =
 [tool:pytest]
 addopts = --black --flake8 --ignore=python/lsst/ts/watcher/version.py
 flake8-ignore = E133 E203 E226 E228 N802 N803 N806 W503
+asyncio_mode = auto
 
 [metadata]
 version = attr: setuptools_scm.get_version
