Build with pyproject.toml

--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -8,6 +8,9 @@ source:
 
 build:
   script: python -m pip install --no-deps --ignore-installed .
+  entry_points:
+    - command_watcher = lsst.ts.watcher:command_watcher
+    - run_watcher = lsst.ts.watcher:run_watcher
 
 test:
   requires:
@@ -20,6 +23,7 @@ test:
     - bin
     - tests
     - setup.cfg
+    - pyproject.toml
   commands:
     - pytest
 
