--- a/tests/data/config/csc/enabled.yaml
+++ b/tests/data/config/csc/enabled.yaml
@@ -10,13 +10,13 @@ rules:
   - name: ScriptQueue:2
 escalation:
 - alarms: ["Enabled.AT*"]
-  to: stella
+  responders:
+  - name: stella
+    type: team
   delay: 0.11
   # This should be ignored because the previous rule handles it
 - alarms: [Enabled.ATCamera]
-  to: otho
+  responders:
+  - name: someone@somewhere
+    type: user
   delay: 0.12
-  # This should result in no escalation
-- alarms: ["Enabled.ScriptQueue:*"]
-  to: ""
-  delay: 0
