--- a/tests/data/config/csc/two_scriptqueue_enabled.yaml
+++ b/tests/data/config/csc/two_scriptqueue_enabled.yaml
@@ -5,5 +5,7 @@ rules:
   - name: "ScriptQueue:2"
 escalation:
 - alarms: ["Enabled.ScriptQueue:2"]
-  to: stella
+  responders:
+  - name: stella
+    type: team
   delay: 0.11
