--- a/tests/data/config/csc/invalid_extra_escalation_field.yaml
+++ b/tests/data/config/csc/invalid_extra_escalation_field.yaml
@@ -1,5 +1,7 @@
 escalation:
 - alarms: [Enabled.AT*]
-  to: stella
+  responders:
+  - name: stella
+    type: team
   delay: 1
   extra_escalation_field: arbitrary_data
