DewPointDepression: update for ts_xml 12.1

--- a/tests/data/config/rules/dew_point_depression/bad_no_dew_point_sensors.yaml
+++ b/tests/data/config/rules/dew_point_depression/bad_no_dew_point_sensors.yaml
@@ -2,10 +2,8 @@ name: Main Telescope
 dew_point_sensors: []
 temperature_sensors:
   - sal_index: 2
-    topics:
-      - topic_name: temperature
-        sensor_names:
-          - sensor_name: somewhere
-            indices: [0, 1, 2, 3]
+    sensor_info:
+      - sensor_name: somewhere
+        indices: [0, 1, 2, 3]
 warning_level: 2
 serious_level: 3
