--- a/tests/data/config/rules/dew_point_depression/bad_dew_point_no_sensor_names.yaml
+++ b/tests/data/config/rules/dew_point_depression/bad_dew_point_no_sensor_names.yaml
@@ -1,14 +1,10 @@
 name: Main Telescope
 dew_point_sensors:
   - sal_index: 5
-    topics:
-      - topic_name: hx85a
-        sensor_names: []
+    sensor_names: []
 temperature_sensors:
   - sal_index: 2
-    topics:
-      - topic_name: temperature
-        sensor_names:
-          - sensor_name: somewhere
+    sensor_info:
+      - sensor_name: somewhere
 warning_level: 2
 serious_level: 3
