--- a/tests/data/config/rules/dew_point_depression/bad_no_name.yaml
+++ b/tests/data/config/rules/dew_point_depression/bad_no_name.yaml
@@ -1,15 +1,11 @@
 dew_point_sensors:
   - sal_index: 5
-    topics:
-      - topic_name: hx85a
-        sensor_names:
-          - up
-          - down
+    sensor_names:
+      - up
+      - down
 temperature_sensors:
   - sal_index: 2
-    topics:
-      - topic_name: temperature
-        sensor_names:
-          - sensor_name: somewhere
+    sensor_info:
+      - sensor_name: somewhere
 warning_level: 2
 serious_level: 3
