--- a/tests/data/config/rules/humidity/bad_no_sal_index.yaml
+++ b/tests/data/config/rules/humidity/bad_no_sal_index.yaml
@@ -1,7 +1,5 @@
 name: Main Telescope
 humidity_sensors:
-  - topics:
-      - topic_name: hx85a
-        sensor_names:
-          - up
-          - down
+  - sensor_names:
+      - up
+      - down
