--- a/tests/data/config/rules/over_temperature/bad_no_name.yaml
+++ b/tests/data/config/rules/over_temperature/bad_no_name.yaml
@@ -1,7 +1,5 @@
 temperature_sensors:
   - sal_index: 1
-    topics:
-      - topic_name: temperature
-        sensor_names:
-          - sensor_name: upstairs
+    sensor_info:
+      - sensor_name: upstairs
 warning_level: 19
