--- a/tests/data/config/rules/over_temperature/bad_invalid_sal_index.yaml
+++ b/tests/data/config/rules/over_temperature/bad_invalid_sal_index.yaml
@@ -1,8 +1,6 @@
 name: MT Widget
 temperature_sensors:
   - sal_index: "1"
-    topics:
-      - topic_name: temperature
-        sensor_names:
-          - sensor_name: upstairs
+    sensor_info:
+      - sensor_name: upstairs
 warning_level: 19
