--- a/tests/data/config/rules/over_temperature/bad_no_sal_index.yaml
+++ b/tests/data/config/rules/over_temperature/bad_no_sal_index.yaml
@@ -1,7 +1,5 @@
 name: MT Widget
 temperature_sensors:
-  - topics:
-      - topic_name: temperature
-        sensor_names:
-          - sensor_name: upstairs
+    sensor_info:
+      - sensor_name: upstairs
 warning_level: 19
