--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -8,7 +8,7 @@ source:
 
 build:
   noarch: generic
-  script: python -m pip install --no-deps --ignore-installed .
+  script: {{ PYTHON }} -m pip install --no-deps --ignore-installed .
   entry_points:
     - command_watcher = lsst.ts.watcher:command_watcher
     - run_watcher = lsst.ts.watcher:run_watcher
@@ -31,16 +31,22 @@ test:
 
 requirements:
   host:
-    - python
+    - python {{ python }}
     - pip
     - setuptools_scm
     - setuptools
     - pytest-runner
+  build:
+    - python {{ python }}
+    - setuptools_scm
+    - setuptools
+    - ts-conda-build =0.3
+    - aiohttp
   run:
-    - python
+    - python {{ python }}
     - setuptools
     - setuptools_scm
     - aiohttp >=3.8,<4.0
-    - ts-idl
-    - ts-utils
+    - ts-idl {{ idl_version }}
+    - ts-salobj {{ salobj_version }}
     - ts-salobj
