--- a/tests/data/config/csc/invalid_extra_escalation_field.yaml
+++ b/tests/data/config/csc/invalid_extra_escalation_field.yaml
@@ -1,7 +1,5 @@
 escalation:
 - alarms: [Enabled.AT*]
-  responders:
-  - name: stella
-    type: team
+  responder: stella
   delay: 1
   extra_escalation_field: arbitrary_data
