--- a/tests/data/config/csc/two_scriptqueue_enabled.yaml
+++ b/tests/data/config/csc/two_scriptqueue_enabled.yaml
@@ -5,7 +5,5 @@ rules:
   - name: "ScriptQueue:2"
 escalation:
 - alarms: ["Enabled.ScriptQueue:2"]
-  responders:
-  - name: stella
-    type: team
+  responder: stella
   delay: 0.11
