Use ts_pre_commit_config

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@ pytest_session.txt
 __pycache__
 tests/.tests
 python/lsst/ts/watcher/version.py
+.pre-commit-config.yaml
+.flake8
+.isort.cfg
+.mypy.ini
