--- a/.github/workflows/news_creation.yaml
+++ b/.github/workflows/news_creation.yaml
@@ -1,8 +1,9 @@
-name: news_creation 
+name: news_creation
 
-on: push
+on:
+  pull_request:
+    types: [opened, reopened, synchronize]
 
 jobs:
   call-workflow:
     uses: lsst-ts/tssw_workflows/.github/workflows/news_creation.yaml@main
-
